--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Awesome rating:</b> 99% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>New to Adobe Illustrator? Need to make a clipping mask for a class or project? Just curious? Follow these steps and find out how easy it really is!</p>
 
           </div>
 
@@ -95,12 +95,8 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Computer/Laptop/iPad</li>
+              <li>Adobe Illustrator</li>
             </ul>
           </aside>
         </div>
@@ -116,16 +112,18 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>OPen Adobe Illustrator.</h3>
+              <p>It's a yellow and brown app that contains the letters "Ai".</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Click on "File".</h3>
+              <p>It is in the menu bar in the upper-left of the screen.</p>
+              <p>Click New... to create a new file or image.</p>
+              <p>Click on Open... to open an existing file to mask.</p>
 
               <!--
 This block contains a photo and has a caption.
