--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a data-flickr-embed="true" href="https://www.flickr.com/photos/holster/1844448657/in/photolist-3NZhjV-5VPENq-dLFyyX-fMVQY-dXaZNn-5zF4aL-5ZG74v-J54HzA-9EMjH7-31e4Tc-5hRbcc-23pYfPE-bqt2Ww-4Wod9E-6qYpGh-58237k-dxyQa4-69jqjs-LZndpu-31e5bx-ss3HS-5Bh5c4-2kvJYMr-7Yus8z-5zNFkz-arSsCW-5YX75o-9GgpT-51Dn79-58pUeh-4D4pt7-5BznbJ-2cDs8RY-25gd15y-7f4ny7-2ivc3Er-5afAwt-68qJ8q-2jpCina-586fUu-2jpGiXK-31e6R2-68RGnS-8KTyPb-68mynz-86R4L5-31e3LX-2kAUD9x-2kAQvdr-74ugvb" title="Graphic Design"><img src="https://live.staticflickr.com/2237/1844448657_d5f9198461_o.jpg" width="%" height="%" alt="Graphic Design">
             </div>
           </li>
 
