--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
             <div class="content">
               <h3>Open Adobe Illustrator.</h3>
               <p>It's a yellow and brown app that contains the letters "Ai".</p> 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/QDTmD-KG1BE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </li>
 
@@ -142,7 +143,6 @@ with a paragraph to create a photo with a caption.
               <p>A drop-down menu will open to the right of the tool bar.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
