--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#565c98;         /* CHANGE THE FONT COLOR HERE */
+        color:#c7c9dd;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
