--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#c7c9dd;         /* CHANGE THE FONT COLOR HERE */
+        color:#565c98;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
@@ -268,7 +268,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#ecdadc;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
