--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Didot, Bodoni 72;         /* CHANGE THE FONT HERE */
+        font-family:Didot, serif;         /* CHANGE THE FONT HERE */
         color:#565c98;         /* CHANGE THE FONT COLOR HERE */
       }  
 
@@ -306,7 +306,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Impact, sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
