--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Didot, serif;         /* CHANGE THE FONT HERE */
+        font-family:Didot, sans-serif;         /* CHANGE THE FONT HERE */
         color:#565c98;         /* CHANGE THE FONT COLOR HERE */
       }  
 
