--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #e3c7cb;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #E3C7CB;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
