--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Serif", Serif, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #E3C7CB;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #ecdadc;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
