--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src= <a data-flickr-embed="true" href="https://www.flickr.com/photos/196946233@N02/52534855944/in/dateposted-public/" title="Monogram-Final-for-web"><img src="https://live.staticflickr.com/65535/52534855944_25380865db_o.png" width="800" height="800" alt="Monogram-Final-for-web"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script> </a>            
       <h1>Bela Reyes' Instructions for Creating a Clipping Mask in Illustrator</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
