--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src= <a <img src="https://live.staticflickr.com/65535/52534855944_cca7d33cae_t.jpg" width="100" align="right" height="100" alt="Monogram-Final-for-web"> </a>            
+      <img src="https://live.staticflickr.com/65535/52534600936_d0210da4a9_t.jpg" width="100" align="right" height="100" alt="Monogram-Final-Pink"></a>            
       <h1>Bela Reyes' Instructions for Creating a Clipping Mask in Illustrator</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
