--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Image is by <a data-flickr-embed="true" href="https://www.flickr.com/photos/holster/1844448657/in/photolist-3NZhjV-5VPENq-dLFyyX-fMVQY-dXaZNn-5zF4aL-5ZG74v-J54HzA-9EMjH7-31e4Tc-5hRbcc-23pYfPE-bqt2Ww-4Wod9E-6qYpGh-58237k-dxyQa4-69jqjs-LZndpu-31e5bx-ss3HS-5Bh5c4-2kvJYMr-7Yus8z-5zNFkz-arSsCW-5YX75o-9GgpT-51Dn79-58pUeh-4D4pt7-5BznbJ-2cDs8RY-25gd15y-7f4ny7-2ivc3Er-5afAwt-68qJ8q-2jpCina-586fUu-2jpGiXK-31e6R2-68RGnS-8KTyPb-68mynz-86R4L5-31e3LX-2kAUD9x-2kAQvdr-74ugvb" title="Graphic Design"><img src="https://live.staticflickr.com/2237/1844448657_d5f9198461_o.jpg" width="%" height="%" alt="Graphic Design"> </a></p>
+      <p>Image is by <a https://flic.kr/p/3NZhjV> </a></p>
     </footer>
 
     <!--
